# Skim

./: .gitignore  .pre-commit-config.yaml  .yamllint  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
catalog/: aws.toml
catalogs/: aws.toml  gcp.toml  local.toml
docs/: backend_unification.md  catalogs.md  cli.md  dispatch_refactor.md  engine_dispatch.md  http.md  new_storage.md  runtime_audit.md  user_gaps.md  what_is_needed_for_prod.md
docs/design/: 001-infrastructure-as-constraints.md  002-z3-backend-selection.md  003-catalog-toml-format.md  004-six-stage-migration.md  005-local-runtime-design.md  006-rust-mesh-architecture.md  007-schema-versioning.md  008-local-pulumi-migration.md  009-precompiled-mesh-wheels.md  010-deploy-submodule-refactor.md  011-deploy-submodule-implementation-plan.md  012-pulumi-automation-and-docker-py-refactor.md  013-logging-and-cli-verbosity.md  014-http-routing-overhaul.md  015-store-surface-implementation-plan.md  016-blob-storage-tier-implementation-plan.md  017-production-runtime-baseline-implementation-plan.md  018-agent-persistence-implementation-plan.md  019-simplification-report.md  020-skaal-init-and-dev-implementation-plan.md  021-solver-diagnostics-implementation-plan.md  022-catalog-overrides-implementation-plan.md  023-relational-migrations-implementation-plan.md  024-secret-injection-implementation-plan.md  025-per-row-ttl-implementation-plan.md
examples/: __init__.py  counter.py  fastapi_streaming.py  file_upload_api.py  todo_api.py
examples/01_hello_world/: app.py
examples/02_todo_api/: app.py
examples/03_dash_app/: app.py
examples/04_mesh_counter/: app.py
examples/05_task_dashboard/: app.py
examples/06_fastapi_streaming/: app.py
examples/07_file_upload_api/: __init__.py  app.py
examples/mesh_counter/: __init__.py  app.py  example.http
mesh/: Cargo.toml  pyproject.toml
mesh/src/: channel.rs  error.rs  lib.rs  migration.rs  plan.rs  registry.rs  state.rs
skaal/: __init__.py  _logging.py  agent.py  api.py  app.py  blob.py  channel.py  components.py  decorators.py  errors.py  module.py  patterns.py  plan.py  plugins.py  relational.py  schedule.py  serialization.py  settings.py  storage.py  sync.py  types.py  vector.py
skaal-mesh/: Cargo.toml
skaal/backends/: __init__.py  _registry.py  _spec.py  base.py  chroma_backend.py  dynamodb_backend.py  file_blob_backend.py  firestore_backend.py  fsspec_blob_backend.py  gcs_blob_backend.py  local_backend.py  pgvector_backend.py  postgres_backend.py  redis_backend.py  redis_channel.py  s3_blob_backend.py  sqlite_backend.py
skaal/catalog/: __init__.py  loader.py  models.py  registry.py
skaal/cli/: __init__.py  _errors.py  _logging.py  _reload.py  _utils.py  build_cmd.py  catalog_cmd.py  config.py  deploy_cmd.py  destroy_cmd.py  diff_cmd.py  infra_cmd.py  init_cmd.py  main.py  migrate_cmd.py  plan_cmd.py  run_cmd.py  stacks_cmd.py
skaal/deploy/: __init__.py  _backends.py  _deps.py  _external.py  _progress.py  _render.py  aws.py  aws_lambda.py  config.py  dependencies.py  docker_compose.py  errors.py  gcp.py  gcp_cloudrun.py  kinds.py  local.py  local_automation.py  local_services.py  pipeline.py  plugin.py  pulumi_backend.py  push.py  registry.py  reporting.py  runtime_assets.py  secrets.py  target.py  wiring.py
skaal/local/: __init__.py  runtime.py  storage.py
skaal/mesh/: __init__.py  client.py  types.py
skaal/migrate/: __init__.py  engine.py  relational.py  shadow.py
skaal/runtime/: __init__.py  _core.py  _dispatch.py  _lifecycle.py  _local_scheduler.py  _local_server.py  _observer.py  _planning.py  _services.py  _transport.py  agent_registry.py  auth.py  base.py  channels.py  distributed.py  local.py  mesh_runtime.py  middleware.py  state.py  telemetry.py
skaal/secrets/: __init__.py  aws.py  gcp.py
skaal/solver/: __init__.py  _pattern_solvers.py  components.py  compute.py  diagnostics.py  explain.py  graph.py  plan.py  solver.py  stability.py  storage.py  targets.py
skaal/types/: __init__.py  blob.py  catalog.py  cli.py  compute.py  constraints.py  deploy.py  invoke.py  observability.py  relational.py  runtime.py  schema.py  secret.py  solver.py  storage.py
skim/backends/: __init__.py  redis_backend.py
skim/cli/: deploy_cmd.py  plan_cmd.py  run_cmd.py
skim/deploy/: aws_lambda.py
skim/local/: __init__.py  runtime.py  storage.py
skim/solver/: solver.py  storage.py
tests/: conftest.py  test_errors.py  test_library_silent.py  test_local.py  test_module_exports.py  test_solver.py  test_sync.py  test_typed_package.py
tests/agent/: test_agent.py
tests/api/: test_api.py
tests/backends/: test_backend_contract.py  test_blob_backend_contract.py  test_native_kv_backends.py
tests/blob/: test_blob_store.py
tests/catalog/: test_extends.py  test_loader_errors.py
tests/cli/: test_catalog_subcommands.py  test_cli_commands.py  test_init_cmd.py  test_logging.py  test_run_reload.py  test_stack_profiles.py  test_unsat_diagnostics.py
tests/deploy/: test_auth_observability_deploy.py  test_aws_apigw.py  test_aws_packaging.py  test_blob_deploy.py  test_gcp_apigw.py  test_local_automation.py  test_local_gateway.py  test_local_stack.py  test_mesh_artifacts.py  test_push.py  test_runtime_wiring.py  test_schedule_builders.py  test_source_bundle.py  test_vector_deploy.py
tests/mesh/: test_mesh_unit.py
tests/runtime/: conftest.py  test_agent_persistence.py  test_appref.py  test_engines.py  test_eventlog_and_runtime.py  test_invoke.py  test_local.py  test_local_runtime_extras.py  test_mesh_runtime.py  test_middleware.py  test_runtime_modules.py  test_runtime_planning.py  test_schedule.py  test_vector_runtime.py
tests/schema/: conftest.py  test_migration.py
tests/secrets/: test_deploy_injectors.py  test_module_wiring.py  test_registry.py
tests/solver/: conftest.py  test_compute_solver.py  test_constraint_solver.py  test_diagnostics.py  test_relational_solver.py  test_solver.py  test_solver_extras.py  test_solver_gaps.py  test_vector_solver.py
tests/storage/: test_catalog.py  (+5 more)
(+106 files in other folders)
