[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skaal"
version = "0.2.0"
description = "Infrastructure as Constraints — write it once, scale it with a word."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.13"
keywords = ["infrastructure", "constraints", "cloud", "deployment", "z3", "solver"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "z3-solver>=4.12",
    "pydantic>=2.0",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "redis>=5.0",
    "aiosqlite>=0.19",
    "uvicorn>=0.29",
    "starlette>=0.34",
    "httpx>=0.27",
    "apscheduler>=3.10,<4.0",
]

[project.urls]
Homepage = "https://github.com/Elouen-ginat/Skaal"
Repository = "https://github.com/Elouen-ginat/Skaal"
Issues = "https://github.com/Elouen-ginat/Skaal/issues"

[project.optional-dependencies]
aws = [
    "boto3>=1.34",
    "pulumi>=3.0",
    "pulumi-aws>=6.0",
    "asyncpg>=0.29",
]
gcp = [
    "google-cloud-firestore>=2.16",
    "google-cloud-storage>=2.16",
    "asyncpg>=0.29",
    "cloud-sql-python-connector[asyncpg]>=1.9",
    "pulumi>=3.0",
    "pulumi-gcp>=7.0",
]
vector = [
    "langchain-core>=1.3",
    "langchain-chroma>=1.1",
    "langchain-postgres>=0.0.17",
    "chromadb>=1.5",
    "psycopg[binary]>=3.3",
]
mesh = [
    # Rust mesh extension — compiled from source via maturin on `uv sync`
    "skaal-mesh",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.8",
    "types-redis>=4.6",
    "hatchling",
    "maturin>=1.4",
    "build>=1.0",
    "pre-commit>=3.6",
    # Rust mesh extension — compiled from source via maturin on `uv sync`
    "skaal-mesh",
]
examples = [
    "dash",
    "fastapi",
    "dash-bootstrap-components>=1.0",
]

[project.scripts]
skaal = "skaal.cli.main:app"

# ── Built-in plugin registrations ─────────────────────────────────────────────
# Skaal resolves storage backends, channel backends, and named catalogs through
# its own plugin registry (skaal.plugins).  Core built-ins are registered here
# so the discovery path is exercised in-tree and third-party packages can
# register additional implementations the same way.

[project.entry-points."skaal.backend_specs"]
local-map = "skaal.backends.kv.local_map:LOCAL_MAP_SPEC"
sqlite = "skaal.backends.kv.sqlite:SQLITE_SPEC"
local-redis = "skaal.backends.kv.redis:LOCAL_REDIS_SPEC"
memorystore-redis = "skaal.backends.kv.redis:MEMORYSTORE_REDIS_SPEC"
rds-postgres = "skaal.backends.kv.postgres:RDS_POSTGRES_SPEC"
cloud-sql-postgres = "skaal.backends.kv.postgres:CLOUD_SQL_POSTGRES_SPEC"
chroma-local = "skaal.backends.vector.chroma:CHROMA_LOCAL_SPEC"
rds-pgvector = "skaal.backends.vector.pgvector:RDS_PGVECTOR_SPEC"
cloud-sql-pgvector = "skaal.backends.vector.pgvector:CLOUD_SQL_PGVECTOR_SPEC"
dynamodb = "skaal.backends.kv.dynamodb:DYNAMODB_SPEC"
firestore = "skaal.backends.kv.firestore:FIRESTORE_SPEC"

[project.entry-points."skaal.channels"]
local = "skaal.backends.channels.local:wire_local"
redis = "skaal.backends.channels.redis:wire_redis"

[tool.uv.sources]
skaal-mesh = { path = "mesh", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["skaal"]
# Include non-Python template files (Dockerfile, Pulumi.yaml, etc.)
artifacts = [
    "skaal/py.typed",
    "skaal/deploy/templates/**",
    "skaal/deploy/data/**",
    "skaal/catalog/data/**",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# ── Skaal project defaults ────────────────────────────────────────────────────
# All fields are optional. CLI flags and SKAAL_* env vars take precedence.
#
# [tool.skaal]
# app         = "mypackage.app:skaal_app"  # default MODULE:APP for run/plan/build
# target      = "aws"                       # aws | gcp
# region      = "us-east-1"
# out         = "artifacts"                 # artifact output directory
# catalog     = "catalogs/aws.toml"         # path to catalog TOML
# stack       = "dev"                       # Pulumi stack name
# gcp_project = "my-gcp-project"            # GCP only
