[package]
name = "skaal-mesh"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Skaal runtime mesh — agent routing, state sync, and migration execution (PyO3)"

[lib]
name = "skaal_mesh"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3      = { version = "0.21", features = ["extension-module"] }
tokio     = { version = "1",    features = ["full"] }
serde     = { version = "1",    features = ["derive"] }
serde_json = "1"
tonic     = "0.11"
chrono    = { version = "0.4",  features = ["serde"] }
uuid      = { version = "1",    features = ["v4"] }

[dev-dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "auto-initialize"] }
