[package]
name = "skaal-mesh"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Skim runtime mesh — agent routing, state sync, and migration execution (PyO3)"

[lib]
name = "skaal_mesh"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tonic = "0.11"

[dev-dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "auto-initialize"] }
